# dahua_mahua

./: .env.example  .gitattributes  .gitignore  Kanagatly VMS.html  README.md  STABLE.md  credentials.json  docker-compose.yml  dss-backup-20260602-153649.json  frontend.Dockerfile  frontend.nginx.conf  generate_config.py  go2rtc.base.yaml  install-dss.bat  logs.txt  mediamtx.yml  netcheck-mac-result.md  netcheck-result.md  nvr_events.jsonl  nvr_inventory.json  nvr_inventory.json.bak  run-dss.ps1  run-netcheck.ps1  run.bat  run.sh  server.py  start-mac.sh  start.ps1
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  dss.db  dss.db-shm  dss.db-shm.clean-bak  dss.db-wal  dss.db-wal.clean-bak  dss.db.bak-20260616-135024  netcheck.py  netcheck_mac.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: crypto.py  db.py  deps.py  fleet_tune.py  main.py  models.py  rate_limit.py  schemas.py  security.py  seed.py  settings.py
backend/tests/: conftest.py  test_camera_import.py  test_camera_import_reachable.py  test_go2rtc_config.py  test_go2rtc_reencode.py  test_nvr_reenable.py  test_path_sync_direct.py  test_per_camera_access.py  test_playback_index_parser.py  test_playback_media_find.py  test_playback_nvr_budget.py  test_playback_router_availability.py  test_playback_router_index.py  test_playback_router_sessions.py  test_playback_router_thumb.py  test_playback_session_unit.py  test_playback_snapshot.py  test_playback_url_builder.py  test_playback_ws_auth.py  test_playback_ws_protocol.py  test_watchdog_grace.py
(+166 files in other folders)
